// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardButton /> renders a spinner when loading 1`] = `
<div>
  <button
    class="css-109oxqq"
    disabled=""
    type="button"
  >
    <div
      class="css-1w86j5d"
    >
      <div
        class="css-9uio79"
      >
        <div
          aria-description="Loading..."
          class="css-1ho80mb"
        />
      </div>
    </div>
  </button>
</div>
`;

exports[`<CardButton /> renders children 1`] = `
<div>
  <button
    class="css-109oxqq"
    type="button"
  >
    Card Content
  </button>
</div>
`;

exports[`<CardButton /> renders without children 1`] = `
<div>
  <button
    class="css-109oxqq"
    type="button"
  />
</div>
`;
